# DWSIM_Model

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DWSIM_Engineering_Review_March2026.docx  Gasification_Model_GUI.dwxml  Gasification_Model_Review_and_Upgrade_Proposal.md  README.md  debug_api.py  debug_comp_out.txt  debug_compounds.py  debug_connect.py  debug_enums.py  export_to_gui.py  fix_clr.py  launch_gui.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run.json
.github/: dependabot.yml  pull_request_template.md
.github/issues_queue/: incomplete_configure_reactors.json
.github/workflows/: Jules-Assessment-AutoFix.yml  Jules-Assessment-Generator.yml  Jules-Auto-Repair.yml  Jules-Code-Quality-Fixer.yml  Jules-Code-Quality-Reviewer.yml  Jules-Comment-Processor.yml  Jules-Completist.yml  Jules-Consolidator.yml  Jules-Control-Tower.yml  Jules-Critics-Comments.yml  Jules-Documentation-Scribe.yml  Jules-Hotfix-Creator.yml  Jules-Issue-Resolver.yml  Jules-Laymans-Terms-Writer.yml  Jules-PR-Compiler.yml  Jules-Scientific-Auditor.yml  Jules-Sentinel.yml  Jules-Tech-Custodian.yml  Jules-Test-Generator.yml  Manual-Run-All.yml  Pragmatic-Programmer-Review.yml  ci-standard.yml  docs.yml  pr-size-check.yml  stale-cleanup.yml
.jules/: sentinel.md
.jules/resolver_data/: Code_Quality_Review_Latest.md
api/: .buildinfo  genindex.html  objects.inv  search.html  searchindex.js
config/: feed_conditions.json  master_config.yaml
config/energy/: energy_inputs.yaml
config/equipment/: gas_cleanup.yaml
config/feeds/: gasifier_feeds.yaml  pem_feeds.yaml  quench_feeds.yaml  trc_feeds.yaml
config/reactors/: gasifier_reactions.yaml  pem_reactions.yaml  trc_reactions.yaml
config/scenarios/: air_blown.yaml  baseline.yaml  high_steam.yaml
docs/api/: Makefile  conf.py  index.rst
docs/api/_build/doctrees/: environment.pickle  index.doctree
docs/api/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/assessments/: Assessment_A_CODE_STRUCTURE.md  Assessment_A_Code_Structure.md  Assessment_B_DOCUMENTATION.md  Assessment_B_Documentation.md  Assessment_C_TEST_COVERAGE.md  Assessment_C_Test_Coverage.md  Assessment_D_ERROR_HANDLING.md  Assessment_D_Error_Handling.md  Assessment_E_PERFORMANCE.md  Assessment_E_Performance.md  Assessment_F_SECURITY.md  Assessment_F_Security.md  Assessment_G_DEPENDENCIES.md  Assessment_G_Dependencies.md  Assessment_H_CI_CD.md  Assessment_I_CODE_STYLE.md  Assessment_I_Code_Style.md  Assessment_J_API_DESIGN.md  Assessment_J_API_Design.md  Assessment_K_DATA_HANDLING.md  Assessment_K_Data_Handling.md  Assessment_L_LOGGING.md  Assessment_L_Logging.md  Assessment_M_CONFIGURATION.md  Assessment_M_Configuration.md  Assessment_N_SCALABILITY.md  Assessment_N_Scalability.md  Assessment_O_MAINTAINABILITY.md  Assessment_O_Maintainability.md  Code_Quality_Review_Latest.md  Comprehensive_Assessment.md
docs/assessments/changelog_reviews/: 2026-03-02-Review.md  2026-03-03-Review.md  2026-03-05-Review.md  Code_Quality_Review_2026-03-08.md  Code_Quality_Review_2026-03-09.md  Code_Quality_Review_2026-03-12.md  Code_Quality_Review_Report.md  git_history_review.md
docs/assessments/completist/: Completist_Report_2026-03-01.md  Completist_Report_2026-03-02.md  Completist_Report_2026-03-04.md  Completist_Report_2026-03-05.md  Completist_Report_2026-03-06.md  Completist_Report_2026-03-07.md  Completist_Report_2026-03-08.md  Completist_Report_2026-03-09.md  Completist_Report_2026-03-10.md  Completist_Report_2026-03-12.md
docs/assessments/issues/open/: Critical_Incomplete_Reactor_Configuration_Logic_in_GasificationFlowsheet.md  Critical_Incomplete_Reactors_Silent_Failures.md  code_quality_issues_found_in_commit_504e684f.md  critical_code_quality_2026-03-09.md  critical_incomplete_reactors.md  critical_incomplete_reactors_2026-03-05.md  critical_silent_failures_placeholders.md  fix_incomplete_pass_implementations.md  incomplete-implementation-gasification.md  issue_test_coverage.md  issue_workarounds_placeholders.md  needs_attention_C_Test_Coverage.md  needs_attention_G_Dependencies.md  silent_failures_and_placeholders.md
docs/assessments/issues/resolved/: Fix_Test_Mono_Clr_Failure.md  issue_C_Test_Coverage.md
src/dwsim_model/: __init__.py  __main__.py  config_loader.py  constants.py  core.py  gasification.py  topology.py
src/dwsim_model/analysis/: sweep.py
src/dwsim_model/chemistry/: biomass_decomposer.py  reactions.py
src/dwsim_model/config/: schema.py
src/dwsim_model/gui/: __init__.py  __main__.py  main_window.py  widgets.py
src/dwsim_model/gui/tabs/: feeds_tab.py  reactors_tab.py  results_tab.py
src/dwsim_model/results/: extractor.py  metrics.py  reporter.py
src/dwsim_model/standalone/: __init__.py  gasifier_model.py  pem_model.py  trc_model.py
src/dwsim_model/units/: __init__.py
tests/: conftest.py  test_acceptance_baseline.py  test_biomass_decomposer.py  test_builder.py  test_config_loader.py  test_gasification_build.py  test_gasification_module.py  test_metrics.py  test_packaging.py  test_reactions.py  test_schema.py  test_standalone.py  test_sweep.py  test_topology.py  test_unit_api.py
