[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dwsim-model"
version = "0.1.0"
description = "DWSIM-backed gasification process simulation library"
authors = [
    {name = "D-sorganization"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "pythonnet>=3.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "PyYAML>=6.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.0.0,<7.0.0",
]
dev = [
    "pytest>=8.0.0,<10.0.0",
    "pytest-cov>=5.0.0,<8.0.0",
    "ruff>=0.8.0,<1.0.0",
    "mypy>=1.10.0,<2.0.0",
]
analysis = [
    "numpy>=1.24.0,<3.0.0",
    "pandas>=2.0.0,<3.0.0",
    "matplotlib>=3.9.0,<4.0.0",
]
all = [
    "dwsim-model[gui,dev,analysis]",
]

[project.scripts]
dwsim-model = "dwsim_model.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dwsim_model*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml"]

[tool.ruff]
src = ["src"]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "C", "PL", "RUF", "SIM", "T20"]
ignore = [
    "E402",     # module-level import not at top (intentional lazy imports)
    "E501",     # line too long (handled by formatter)
    "B904",     # raise from (pre-existing, fix incrementally)
    "PLR0911",  # too many return statements (pre-existing)
    "PLR0913",  # too many arguments
    "PLR0915",  # too many statements
    "PLR0912",  # too many branches
    "PLR2004",  # magic value in comparison (ubiquitous in tests)
    "PLC0415",  # import not at top-level (intentional lazy imports)
    "PLW0603",  # global statement (pre-existing in core.py)
    "C901",     # too complex
    "UP045",    # non-PEP 604 union types (pre-existing, migrate later)
    "RUF001",   # ambiguous unicode char in string
    "RUF002",   # ambiguous unicode char in docstring
    "RUF003",   # ambiguous unicode char in comment
    "RUF012",   # mutable class attribute without ClassVar
    "RUF059",   # unused unpacked variable
    "SIM102",   # collapsible if (pre-existing)
    "T201",     # print found (used intentionally in CLI and reporting)
]

[tool.ruff.lint.isort]
known-first-party = ["dwsim_model"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
warn_return_any = false
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unit: marks tests as unit tests (no DWSIM runtime)",
    "integration: marks tests as integration tests (requires DWSIM)",
    "scientific: marks tests as scientific computing tests",
]
